--- a/css/main.css
+++ b/css/main.css
@@ -761,6 +761,10 @@ ul {
   padding: 24px 0 0 0;
 }
 
+.dostup-border-border {
+  cursor: pointer;
+}
+
 .dostup-border-inner-title {
   font-family: "Roboto-Medium";
   font-size: 14px;
@@ -828,13 +832,23 @@ ul {
   letter-spacing: -0.02em;
   color: #5f91ce;
 }
-
-.dostup-border-price2 {
+.dostup-border-price2 
+{
   position: relative;
   padding: 16px 0 0 0;
   font-family: "Roboto-Regular";
   font-size: 56px;
   line-height: 56px;
+  letter-spacing: -0.05em;
+  color: #ffffff;
+}
+.dostup-border-price2 p {
+
+  font-family: "Roboto-Regular";
+  font-size: 56px;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
   letter-spacing: -0.05em;
   color: #ffffff;
 }
@@ -1057,6 +1071,13 @@ ul {
 
 .dostup-border-dlitel-button {
   padding: 0 16px 0 0;
+}
+.dostup-border-dlitel-button .chekbox-title {
+  padding:0 0 0 30px;
+  color: #fff;
+}
+.dostup-border-dlitel-button .checkbox-main .checkbox {
+  background: #68729c;
 }
 
 .dostup-border-dlitel-button:last-child {
@@ -2884,11 +2905,14 @@ ul {
 
 .raschet-wrap {
   padding: 0 0 40px 0;
-  border-bottom: 1px solid #728ec5;
   justify-content: space-between;
   display: flex;
 }
 
+.raschet-border__inner {
+  display: none;
+  border-top: 1px solid #728ec5;
+}
 .raschet-block {
   padding: 0 40px 0 0;
   width: 50%;
@@ -4612,7 +4636,6 @@ ul.tabs3 li.active {
 .accordion .item.open {
 }
 .accordion .item.open .hidden-box {
-  display: block;
   font-size: 16px;
   line-height: 28px;
   color: #151922;
