--- a/css/main.css
+++ b/css/main.css
@@ -4636,6 +4636,7 @@ ul.tabs3 li.active {
 .accordion .item.open {
 }
 .accordion .item.open .hidden-box {
+  display: block;
   font-size: 16px;
   line-height: 28px;
   color: #151922;
