--- a/css/main.css
+++ b/css/main.css
@@ -835,8 +835,7 @@ ul {
   letter-spacing: -0.02em;
   color: #5f91ce;
 }
-.dostup-border-price2 
-{
+.dostup-border-price2 {
   position: relative;
   padding: 16px 0 0 0;
   font-family: "Roboto-Regular";
@@ -846,7 +845,6 @@ ul {
   color: #ffffff;
 }
 .dostup-border-price2 p {
-
   font-family: "Roboto-Regular";
   font-size: 56px;
   padding: 0;
@@ -1077,7 +1075,7 @@ ul {
   padding: 0 16px 0 0;
 }
 .dostup-border-dlitel-button .chekbox-title {
-  padding:0 0 0 30px;
+  padding: 0 0 0 30px;
   color: #fff;
 }
 .dostup-border-dlitel-button .checkbox-main .checkbox {
@@ -1597,7 +1595,24 @@ ul {
   color: #68729c;
   padding: 0 0 8px 0;
 }
-
+.nodone-border-type {
+  margin-right: 104px;
+}
+.nodone-border-icon {
+  text-align: center;
+  margin-bottom: 24px;
+}
+.nodone-border-quiz-title{
+  font-weight: 500;
+  font-size: 48px;
+  text-align: center;
+  letter-spacing: -0.01em;
+  font-family: "Roboto Flex", sans-serif;
+  color: #14225b;
+}
+.quiz-success {
+  display: none;
+}
 /*CSS ЧЕКБОКСА*/
 
 .checkbox-main {
@@ -1656,11 +1671,21 @@ ul {
   letter-spacing: -0.02em;
   color: #14225b;
 }
-
+.nodone-border-type .checkbox-main {
+  padding: 10px;
+  border-radius: 12px;
+  border-color: #008df4;
+}
 .nodone-border-chekbox {
   padding: 24px 0 0 0;
 }
-
+.nodone-border-chekbox-active {
+  border: 1px solid #008df4;
+}
+.nodone-border-type .checkbox {
+  top: 10px;
+  left: 10px;
+}
 .nodone-border-input {
   padding: 24px 0 0 0;
 }
@@ -2618,8 +2643,12 @@ ul {
   position: relative;
   border-radius: 16px;
   width: 1120px;
-  padding: 32px 32px;
+  padding: 0;
   margin: 50px auto 0 auto;
+}
+
+.modad-block {
+  padding: 32px 0 0 0;
 }
 
 .modal-wrap {
@@ -4454,6 +4483,7 @@ ul.tabs3 li.active {
 
 .trebovanie-slayder {
   display: none;
+  position: relative;
 }
 
 .raschet-wrap4-block3 {
@@ -4739,4 +4769,93 @@ ul.tabs3 li.active {
 
 .tarif-buttom-mb {
   display: none;
+}
+
+.modal-inner2-pd {
+  display: flex;
+  padding: 24px 4px 0 4px;
+}
+
+.modal-title-new {
+  padding: 32px 0 0 0;
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  color: #68729c;
+}
+
+.modal-inner2-block {
+  width: 33.33333333%;
+  padding: 0 12px;
+}
+
+.modal-inner2-border {
+  padding: 16px 24px;
+  background: rgba(104, 114, 156, 0.1);
+  backdrop-filter: blur(7px);
+  border-radius: 12px;
+}
+
+.modal-inner2-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-inner2-title2 {
+  font-family: "Roboto-Medium";
+  font-size: 22px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: #14225b;
+}
+
+.modal-inner2-suptitle {
+  padding: 8px 0 0 0;
+  font-family: "Roboto-Medium";
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  color: #14225b;
+}
+
+.modap-price {
+  padding: 32px 0 0 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.modap-price-title {
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 40px;
+  letter-spacing: -0.01em;
+  color: #0f5fff;
+}
+
+.modap-price-suptitle {
+  font-family: "Roboto-Regular";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -0.05em;
+  color: #0f5fff;
+}
+
+.modap-title {
+  padding: 32px 0;
+  border-bottom: 1px solid #68729c;
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 32px;
+  color: #68729c;
+}
+
+.js-modal.is-open {
+  overflow: auto;
 }
