--- a/css/media.css
+++ b/css/media.css
@@ -988,7 +988,7 @@
 		position: relative;
 		border-radius: 16px;
 		width: 1120px;
-		padding: 32px 32px;
+		padding: 0;
 		margin: 20px auto 0 auto;
 	}
 
@@ -1950,7 +1950,7 @@
 
 	.modal-border {
 		width: 100%;
-		padding: 64px 24px 24px 24px;
+		padding: 0;
 	}
 
 	.modal-block3 {
@@ -2851,6 +2851,21 @@
 		padding: 40px 0 0 0;
 	}
 
+	.modal-inner2-pd {
+		flex-wrap: wrap;
+		padding: 0 4px;
+	}
+
+	.modal-inner2-block {
+		width: 100%;
+		padding: 20px 12px 0 12px;
+	}
+
+	.modap-price {
+		flex-wrap: wrap;
+	}
+
+
 
 }
 
@@ -3057,6 +3072,10 @@
 	}
 
 	.dostup-border-price2-pd {
+		padding: 56px 0 0 0;
+	}
+
+	.dostup-border-price2-pd2 {
 		padding: 56px 0 0 0;
 	}
 
