--- a/css/main.css
+++ b/css/main.css
@@ -766,6 +766,22 @@ ul {
 
 .dostup-border-border {
   cursor: pointer;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "Roboto-Medium";
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+}
+
+.dostup-border-border:hover {
+  background: #008df4;
+  border: 1px solid #008df4;
 }
 
 .dostup-border-inner-title {
